fixed spacing within buttons

--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -83,9 +83,30 @@
 		min-height: 63em;
 	}
 
-	// .testimonials {
-	// 	margin-bottom: 6.25em;
-	// }
+
+	.testimonials {
+		margin-bottom:5em;
+	}
+	 
+	.hardcopy  {
+		
+	a {
+		margin:10% 0;
+		text-align:center;
+	}
+		
+
+	.red-btn {
+		font-size:1.6rem;
+		padding:3% 5%;
+		 margin-right: 4%;
+		}
+	}
+	 
+	
+	.shea-hero {
+	 margin-bottom:4%;
+	}
 
 }
 
