--- a/css/custom.scss
+++ b/css/custom.scss
@@ -38,8 +38,11 @@
 	padding-top:7%;
 
 	h1 {
-	margin-top:45%;
+	margin-top:42%;
 	margin-bottom:8%;
+	font-size: 2.2rem;
+  line-height: 1.45;
+  font-style: italic;
 	}
 
 	a:focus, a:hover {
@@ -57,9 +60,6 @@
 	}
 
 }
-
-
-
 
 
 .overlay {
@@ -330,6 +330,7 @@ $transition: 1s; // increase this to see the transformations in slow-motion
 
 .lines-button:hover {
   opacity: 1;
+
      
   .lines {
     &:before { top: $button-size/3.5; }
